# pipctl

./: LICENSE-3rdparty.csv  NOTICE  README.md  README.rst  setup.cfg  setup.py
pipctl/: __init__.py  __main__.py  _config.py  _constraint.py  _exceptions.py  _osv.py  cli.py
pipctl/data/: configSchema.json  templateConfig.yaml
tests/: base.py  test_cli.py  test_config.py  test_constraint.py
