[metadata]
name = pipctl
version = attr: pipctl.__about__.__version__
description = Control pip's resolution process
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/fridex/pipctl
download_url = https://pypi.org/project/pipctl/
keywords = packaging, pip, dependencies, dependency-management, utilities, vulnerabilities, security, pip-tools
license = BSD-3-Clause
license_files = LICENSE
author = Fridolin Pokorny
author_email = fridolin.pokorny@datadoghq.com
maintainer = Fridolin Pokorny
maintainer_email = fridolin.pokorny@datadoghq.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython


[options]
packages = find:
install_requires =
    attrs
    click
    daiquiri
    micropipenv
    pyyaml
    requests
    rich-click
    openapi-schema-validator
    pip-tools
    pip-requirements-parser
python_requires = >=3.9
include_package_data = True

[options.package_data]
pipctl = data/configSchema.json, data/templateConfig.yaml

[options.packages.find]
exclude =
    tests*

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    pipctl = pipctl.cli:cli
